styles/sheetEdits.css
/* Default colors */
body :root {
  --usesUnexpended: #b33737;
  --itemAttuned: #7a7971;
  --itemNotAttuned: #44191A;
  --spellPrepared: #7a7971;
  --spellNotPrepared: #44191A;
  --spellAlwaysPrepared: #7F7F7F;
  --rarityUncommon: #008000;
  --rarityRare: #0000ff;
  --rarityVeryRare: #800080;
  --rarityLegendary: #ffa500;
  --rarityArtifact: #d2691e;
}

/* Style of the dots */
.dnd5e .items-list .zhell-dots .dot {
  height: 15px;
  width: 15px;
  max-height: 15px;
  max-width: 15px;
  background-color: var(--usesUnexpended);
  border-radius: 2px;
  cursor: pointer;
  box-shadow: inset 0 0 4px 0 black, 0 0 4px 0 var(--usesUnexpended);
}

.dnd5e .items-list .zhell-dots .dot:hover {
  transform: scale(1.2);
}

/* Style of the expended dots */
.dnd5e .items-list .zhell-dots .dot.empty {
  background-color: lightgray;
}

/* style of the 'not all dots shown' dot */
.dnd5e .items-list .zhell-dots .dot.empty.has-more {
  mix-blend-mode: color-burn;
}

.dnd5e .items-list .zhell-dots .dot.has-more {
  mix-blend-mode: inherit;
}

.dnd5e.sheet.actor .spellbook .spell-uses {
  padding-left: 5px;
}

/* dot container */
.dnd5e .items-list .zhell-dots {
  flex-direction: row-reverse;
  max-width: fit-content;
  gap: 2px;
  flex: 2;
}

/* show shadow overflow */
.dnd5e .items-list .items-header.spellbook-header .item-name {
  overflow: visible;
}

/* Attunement icon */
.dnd5e.sheet.actor .inventory-list .item .item-name .item-detail.attunement {
  filter: drop-shadow(0 0 1px black);
}

.dnd5e.sheet.actor .inventory-list .item .item-name .item-detail.attunement i.attuned {
  color: var(--itemAttuned) !important;
}

.dnd5e.sheet.actor .inventory-list .item .item-name .item-detail.attunement i.not-attuned {
  color: var(--itemNotAttuned) !important;
}

/* Prepared icon */
.dnd5e.sheet.actor .tab.spellbook .item-controls .item-control.item-toggle.active i {
  color: var(--spellPrepared) !important;
  filter: drop-shadow(0 0 1px black);
}

.dnd5e.sheet.actor .tab.spellbook .item-controls .item-control.item-toggle.fixed i {
  color: var(--spellAlwaysPrepared) !important;
  filter: drop-shadow(0 0 1px black);
}

.dnd5e.sheet.actor .tab.spellbook .item-controls .item-control.item-toggle:not(.active):not(.fixed) i {
  color: var(--spellNotPrepared) !important;
  filter: drop-shadow(0 0 1px black);
}

/* HP colors if below 33% */
.dnd5e.sheet.actor input[name="system.attributes.hp.value"].near-death {
  color: red;
}

/* HP colors if below 66% */
.dnd5e.sheet.actor input[name="system.attributes.hp.value"].bloodied {
  color: peru;
}

/* RARITY COLORS */
.dnd5e.sheet.actor .item.uncommon .item-name h4 {
  color: var(--rarityUncommon) !important;
}

.dnd5e.sheet.actor .item.rare .item-name h4 {
  color: var(--rarityRare) !important;
}

.dnd5e.sheet.actor .item.veryrare .item-name h4 {
  color: var(--rarityVeryRare) !important;
}

.dnd5e.sheet.actor .item.legendary .item-name h4 {
  color: var(--rarityLegendary) !important;
}

.dnd5e.sheet.actor .item.artifact .item-name h4 {
  color: var(--rarityArtifact) !important;
}

/* nuke resources */
.dnd5e.sheet.actor .tab.attributes.flexrow .center-pane .attributes {
  display: none;
}

/* Fix overflow in sheet header (race, background, alignment, proficiency) */
.dnd5e.sheet.actor .sheet-header .summary {
  white-space: nowrap;
  /* TODO: not needed after 2.2.x */
}

.dnd5e.sheet.actor .sheet-header .summary li {
  padding-right: 0.5em;
}

